lab1/Test/L1-A-11-90.cmm
int ;
int xGqT8A 
;
struct he {
}VyhkXiBej8R2fnEFM ( int iIOVhHMBB3EPfaNmAQj , float 
  XqmG8jAf7EqQsWL ) {
  struct IenU_H5SU_dY3brwW lY9AUy4F [ 370847153 ] 
    ;< 
}
struct {
  int FEsPJeZ8q , v7RChAXUtqI3ttFS , O1 = ZxnNADX1kVISsL4X3uR3 
    = FA <= hNYxNHjwkZc2 - jVs * CmFNcpCVWSEX [ kRhROQ 
    || MfCT8VO31faNlpYv_C && zg3kgz == Y2B ( o7oYFFMoieWq2pVj 
    >= jGHfc3jH2lwbC - waQBP_OaMYfn5 / ( St = rXi > asof6IUqa6GE_ 
    [ fUTz8NVaVkQMgahg03 < tDD5EYXQGjmvS7R + bEXYXVjNtQk0U 
    [ wku && Jbsh - ( w = HTyNRfX3RPXBT = - ! EodiQ [ 
    nsCLjIV_qMNJLFQDpF && KIlWlxmQYgoIevkb != JN * BCVvX 
    [ RQZJWwhDGFE8U >= H8wso7EtqDzo0XGP / I [ Pe2mEFYNUKEm 
    >= Nl8wb5OC5h * ( wK0ggubR8KON3yzR8GKV <= ( yCsA9qnHzwvLeQOuBP 
    || && xat > ( txG9N5nVvxzoqrCogLW - ( m2gDzlKEu8Ox 
    || jzcBwXmucA - ( Id94amVgUKWKz && cRENhQyxlj8bxeZyWWv 
    / - vm0KNwe ( pvnxam , t5wa4NX ) ) . afJclGQKO ) * 
    aTAL ) ) < ! NRW9cmS ) . qWv ] ] ] - _70FBBpemfxO 
    != uQwRVs2b6Vrg1V4iP5mr ) != Xvz ] * _XvvNFNTuOJF0_Ccfb2 
    * - ! aW52ffZxdTvHrdQ . T - ( ! bJmA3zi ) . ad / Km 
    ] * - 1547666780.643611807 ) ) . OQHiM + 1551782793 
    ] / - ! tMwZOUjd9CdmdZ4 ( ) ;
};
int pRvUhxect4RN6quce , 

;
int ;
int ( ) {
  if ( yL9duZM )   if ( LscVcJyywTIw3bUGvrr )   while 
    ( wUzOWa5EEk ) {
  }
else   m 

else   if ( vE2jPrJnaqZvT4eV8M )   return M8tM3IfhQv6 
    ;


}
